--- a/index.html
+++ b/index.html
@@ -1,215 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Iniciar Sesión | Sahara Wear</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background-color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    header {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #fff;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #111;
-    }
-
-    .header-icons {
-      display: flex;
-      gap: 20px;
-    }
-
-    .icon-button {
-      font-size: 1.8rem;
-      color: #111;
-      cursor: pointer;
-    }
-
-    .login-container {
-      display: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      max-width: 400px;
-      padding: 40px;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      background: white;
-      text-align: center;
-      z-index: 999;
-    }
-
-    .login-container h2 {
-      font-weight: 600;
-      font-size: 24px;
-      margin-bottom: 10px;
-      letter-spacing: 1px;
-    }
-
-    .login-container p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 25px;
-    }
-
-    .login-container input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-
-    .login-container button {
-      width: 100%;
-      padding: 12px;
-      background-color: #111;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .login-container button:hover {
-      background-color: #333;
-    }
-
-    .login-options {
-      display: flex;
-      justify-content: space-between;
-      font-size: 12px;
-      margin-top: 10px;
-    }
-
-    .login-options a {
-      color: #999;
-      text-decoration: none;
-    }
-
-    .login-options a:hover {
-      text-decoration: underline;
-    }
-
-    .register {
-      margin-top: 15px;
-      font-size: 13px;
-    }
-
-    .register a {
-      color: #333;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .close-login {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 20px;
-      color: #999;
-      cursor: pointer;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Sahara Wear - Ropa deportiva hecha en Colombia">
+  <title>Sahara Wear</title>
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <header>
+  <header class="header">
     <div class="logo">Sahara Wear</div>
-    <div class="header-icons">
-      <i class="fas fa-shopping-cart icon-button" title="Carrito"></i>
-      <i class="fas fa-user-circle icon-button" title="Iniciar sesión" onclick="mostrarLogin()"></i>
-    </div>
+    <nav class="menu">
+      <a href="#inicio">Inicio</a>
+      <a href="#productos">Productos</a>
+      <a href="#nosotros">Nosotros</a>
+      <a href="#contacto">Contacto</a>
+    </nav>
   </header>
 
-  <div class="login-container" id="loginContainer">
-    <span class="close-login" onclick="cerrarLogin()">&times;</span>
-    <h2>INICIAR SESIÓN</h2>
-    <p>Escribe tu correo electrónico y contraseña para iniciar sesión:</p>
-    <input type="email" id="email" placeholder="Correo electrónico" />
-    <input type="password" id="password" placeholder="Contraseña" />
+  <section id="inicio" class="hero">
+    <h1>Viste con Poder. Viste Sahara.</h1>
+    <p>Ropa deportiva de alta calidad hecha en Colombia</p>
+    <a href="#productos" class="btn">Ver productos</a>
+  </section>
 
-    <div class="login-options">
-      <div></div>
-      <a href="#">¿Olvidaste la contraseña?</a>
+  <section id="productos" class="productos">
+    <h2>Nuestros Productos</h2>
+    <div class="grid-productos">
+      <div class="producto">
+        <img src="https://via.placeholder.com/300x400" alt="Producto 1">
+        <h3>Top Deportivo Sahara</h3>
+        <p>$49.900</p>
+        <a href="producto.html" class="btn-mini">Ver más</a>
+      </div>
+      <div class="producto">
+        <img src="https://via.placeholder.com/300x400" alt="Producto 2">
+        <h3>Leggins de Compresión</h3>
+        <p>$89.900</p>
+        <a href="producto.html" class="btn-mini">Ver más</a>
+      </div>
     </div>
+  </section>
 
-    <button onclick="login()">INICIAR SESIÓN</button>
+  <section id="nosotros" class="nosotros">
+    <h2>Sobre Nosotros</h2>
+    <p>En Sahara Wear creemos en el poder de vestir con confianza. Apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.</p>
+  </section>
 
-    <div class="register">
-      ¿No tienes una cuenta? <a href="#">Registro</a>
-    </div>
-  </div>
+  <section id="contacto" class="contacto">
+    <h2>Contacto</h2>
+    <p>¿Tienes dudas o quieres distribuir nuestra marca? Escríbenos a <strong>saharawear@correo.com</strong></p>
+  </section>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "TU_API_KEY",
-      authDomain: "sahara-wear.firebaseapp.com",
-      projectId: "sahara-wear",
-      storageBucket: "sahara-wear.appspot.com",
-      messagingSenderId: "555135188662",
-      appId: "1:555135188662:web:85bd56a1de51d533d8897"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.login = () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("Inicio de sesión exitoso");
-        })
-        .catch((error) => {
-          alert("Error: " + error.message);
-        });
-    };
-
-    window.mostrarLogin = () => {
-      document.getElementById("loginContainer").style.display = "block";
-    };
-
-    window.cerrarLogin = () => {
-      document.getElementById("loginContainer").style.display = "none";
-    };
-  </script>
-
+  <footer class="footer">
+    <p>&copy; 2025 Sahara Wear. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
