--- a/index.html
+++ b/index.html
@@ -1,133 +1,56 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sahara Wear</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Montserrat', sans-serif;
-      }
-      body, html {
-        height: 100%;
-        width: 100%;
-        color: #fff;
-        scroll-behavior: smooth;
-      }
-      video.bg-video {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-      }
-      .overlay {
-        background-color: rgba(48, 26, 18, 0.7);
-        min-height: 100vh;
-        padding: 2rem;
-      }
-      header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 3rem;
-      }
-      nav a {
-        margin-left: 1.5rem;
-        color: #f4e3d7;
-        text-decoration: none;
-        font-weight: 600;
-      }
-      h1 {
-        font-size: 2.5rem;
-        text-align: center;
-        color: #dfa878;
-        margin-bottom: 1rem;
-      }
-      p.sub {
-        text-align: center;
-        color: #f4e3d7;
-        margin-bottom: 2rem;
-        font-size: 1.1rem;
-      }
-      .btn {
-        display: inline-block;
-        background-color: #a65c34;
-        color: white;
-        padding: 0.75rem 1.5rem;
-        border-radius: 1rem;
-        text-decoration: none;
-        font-weight: 600;
-        margin: auto;
-      }
-      section {
-        margin-top: 4rem;
-        padding: 1rem;
-        background: rgba(255, 255, 255, 0.05);
-        border-radius: 1rem;
-      }
-      footer {
-        margin-top: 3rem;
-        font-size: 0.9rem;
-        text-align: center;
-        color: #e7d5ca;
-      }
-      .links a {
-        display: block;
-        color: #f4e3d7;
-        margin-bottom: 0.5rem;
-        text-decoration: none;
-      }
-    </style>
-  </head>
-  <body>
-    <video autoplay muted loop class="bg-video">
-      <source src="https://cdn.pixabay.com/video/2024/03/12/203543-917095130_large.mp4" type="video/mp4" />
-      Tu navegador no soporta video HTML5.
-    </video>
+import React from "react";
 
-    <div class="overlay">
-      <header>
-        <h2>Sahara Wear</h2>
-        <nav>
-          <a href="#inicio">Inicio</a>
-          <a href="#nosotros">Nosotros</a>
-          <a href="#contacto">Contacto</a>
-        </nav>
-      </header>
+export default function Home() {
+  return (
+    <div className="relative w-full h-screen overflow-hidden text-white">
+      {/* Fondo de video */}
+      <video
+        autoPlay
+        muted
+        loop
+        className="absolute top-0 left-0 w-full h-full object-cover z-0"
+      >
+        <source
+          src="https://cdn.pixabay.com/video/2024/03/12/203543-917095130_large.mp4"
+          type="video/mp4"
+        />
+        Tu navegador no soporta videos HTML5.
+      </video>
 
-      <main id="inicio">
-        <h1>Viste con Poder. Viste Sahara.</h1>
-        <p class="sub">Ropa deportiva de alta calidad hecha en Colombia</p>
-        <a href="#productos" class="btn">Ver productos</a>
-      </main>
+      {/* Contenido principal */}
+      <div className="relative z-10 flex flex-col items-center justify-center h-full bg-black/60 px-4">
+        <h1 className="text-4xl md:text-6xl font-bold text-white text-center">
+          Viste con Poder. Viste Sahara.
+        </h1>
+        <p className="mt-4 text-lg md:text-xl text-gray-200 text-center">
+          Ropa deportiva de alta calidad hecha en Colombia
+        </p>
+        <button className="mt-6 bg-white text-black font-semibold py-2 px-6 rounded-xl shadow-md hover:bg-gray-200">
+          Ver productos
+        </button>
+      </div>
 
-      <section id="nosotros">
-        <h2>Nosotros</h2>
+      {/* Sección Nosotros */}
+      <section id="nosotros" className="relative z-10 bg-black/80 text-white px-8 py-12">
+        <h2 className="text-3xl font-bold mb-4">Nosotros</h2>
         <p>
-          En Sahara Wear creemos en el poder de vestir con confianza,
-          apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.
+          En Sahara Wear creemos en el poder de vestir con confianza, apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.
         </p>
       </section>
 
-      <section id="contacto">
-        <h2>Contacto</h2>
-        <div class="links">
-          <a href="mailto:saharawear@hotmail.com">📧 saharawear@hotmail.com</a>
-          <a href="https://www.instagram.com/sahara__wear" target="_blank">📸 Instagram</a>
-          <a href="https://www.facebook.com/share/16CR9DFW3t" target="_blank">📘 Facebook</a>
-        </div>
+      {/* Sección Contacto */}
+      <section id="contacto" className="relative z-10 bg-black/80 text-white px-8 py-12">
+        <h2 className="text-3xl font-bold mb-4">Contacto</h2>
+        <ul className="space-y-2">
+          <li>📧 saharawear@hotmail.com</li>
+          <li>
+            📸 <a href="https://www.instagram.com/sahara__wear" className="underline text-gray-300" target="_blank">Instagram</a>
+          </li>
+          <li>
+            📘 <a href="https://www.facebook.com/share/16CR9DFW3t" className="underline text-gray-300" target="_blank">Facebook</a>
+          </li>
+        </ul>
       </section>
-
-      <footer>
-        © 2025 Sahara Wear - Todos los derechos reservados
-      </footer>
     </div>
-  </body>
-</html>
+  );
+}
