--- a/index.html
+++ b/index.html
@@ -2,44 +2,67 @@ import React from "react";
 
 export default function Home() {
   return (
-    <div className="relative w-full h-screen overflow-hidden text-white">
-      {/* Fondo de video */}
-      <video
-        autoPlay
-        muted
-        loop
-        className="absolute top-0 left-0 w-full h-full object-cover z-0"
-      >
-        <source
-          src="https://cdn.pixabay.com/video/2024/03/12/203543-917095130_large.mp4"
-          type="video/mp4"
-        />
-        Tu navegador no soporta videos HTML5.
-      </video>
+    <div className="relative w-full min-h-screen bg-black text-white">
+      {/* Fondo de video en la sección principal */}
+      <div className="relative h-screen overflow-hidden">
+        <video
+          autoPlay
+          muted
+          loop
+          className="absolute top-0 left-0 w-full h-full object-cover z-0"
+        >
+          <source
+            src="https://cdn.pixabay.com/video/2024/03/12/203543-917095130_large.mp4"
+            type="video/mp4"
+          />
+          Tu navegador no soporta videos HTML5.
+        </video>
 
-      {/* Contenido principal */}
-      <div className="relative z-10 flex flex-col items-center justify-center h-full bg-black/60 px-4">
-        <h1 className="text-4xl md:text-6xl font-bold text-white text-center">
-          Viste con Poder. Viste Sahara.
-        </h1>
-        <p className="mt-4 text-lg md:text-xl text-gray-200 text-center">
-          Ropa deportiva de alta calidad hecha en Colombia
-        </p>
-        <button className="mt-6 bg-white text-black font-semibold py-2 px-6 rounded-xl shadow-md hover:bg-gray-200">
-          Ver productos
-        </button>
+        <div className="relative z-10 flex flex-col items-center justify-center h-full bg-black/60 px-4">
+          <h1 className="text-4xl md:text-6xl font-bold text-white text-center">
+            Viste con Poder. Viste Sahara.
+          </h1>
+          <p className="mt-4 text-lg md:text-xl text-gray-200 text-center">
+            Ropa deportiva de alta calidad hecha en Colombia
+          </p>
+          <button className="mt-6 bg-white text-black font-semibold py-2 px-6 rounded-xl shadow-md hover:bg-gray-200">
+            Ver productos
+          </button>
+        </div>
       </div>
 
       {/* Sección Nosotros */}
-      <section id="nosotros" className="relative z-10 bg-black/80 text-white px-8 py-12">
+      <section id="nosotros" className="bg-black text-white px-8 py-12">
         <h2 className="text-3xl font-bold mb-4">Nosotros</h2>
         <p>
           En Sahara Wear creemos en el poder de vestir con confianza, apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.
         </p>
       </section>
 
+      {/* Sección Productos */}
+      <section id="productos" className="bg-neutral-900 text-white px-8 py-12">
+        <h2 className="text-3xl font-bold mb-8">Productos</h2>
+        <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <div className="bg-neutral-800 p-4 rounded-xl shadow-lg">
+            <div className="h-48 bg-gray-700 rounded mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Camiseta Deportiva</h3>
+            <p className="text-gray-300">Comodidad, diseño y calidad en una sola prenda.</p>
+          </div>
+          <div className="bg-neutral-800 p-4 rounded-xl shadow-lg">
+            <div className="h-48 bg-gray-700 rounded mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Leggins Premium</h3>
+            <p className="text-gray-300">Diseño colombiano que estiliza tu figura y rinde contigo.</p>
+          </div>
+          <div className="bg-neutral-800 p-4 rounded-xl shadow-lg">
+            <div className="h-48 bg-gray-700 rounded mb-4"></div>
+            <h3 className="text-xl font-semibold mb-2">Sudadera Oversize</h3>
+            <p className="text-gray-300">Ideal para tus días más relajados con estilo.</p>
+          </div>
+        </div>
+      </section>
+
       {/* Sección Contacto */}
-      <section id="contacto" className="relative z-10 bg-black/80 text-white px-8 py-12">
+      <section id="contacto" className="bg-black text-white px-8 py-12">
         <h2 className="text-3xl font-bold mb-4">Contacto</h2>
         <ul className="space-y-2">
           <li>📧 saharawear@hotmail.com</li>
