--- a/index.html
+++ b/index.html
@@ -1,62 +1,75 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sahara Wear - Ropa deportiva hecha en Colombia">
-  <title>Sahara Wear</title>
-  <link rel="stylesheet" href="css/estilos.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header class="header">
-    <div class="logo">Sahara Wear</div>
-    <nav class="menu">
-      <a href="#inicio">Inicio</a>
-      <a href="#productos">Productos</a>
-      <a href="#nosotros">Nosotros</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
+import React from "react";
 
-  <section id="inicio" class="hero">
-    <h1>Viste con Poder. Viste Sahara.</h1>
-    <p>Ropa deportiva de alta calidad hecha en Colombia</p>
-    <a href="#productos" class="btn">Ver productos</a>
-  </section>
+export default function Home() {
+  return (
+    <div className="w-full overflow-x-hidden font-sans">
+      {/* Sección Hero con video de fondo */}
+      <div className="relative w-full h-screen text-white">
+        <video
+          autoPlay
+          muted
+          loop
+          className="absolute top-0 left-0 w-full h-full object-cover z-0"
+        >
+          <source
+            src="https://cdn.pixabay.com/video/2023/07/25/174397-846917983_large.mp4"
+            type="video/mp4"
+          />
+        </video>
+        <div className="relative z-10 flex flex-col items-center justify-center h-full bg-black/50 px-4">
+          <h1 className="text-4xl md:text-6xl font-bold text-white text-center">
+            Viste con Poder. Viste Sahara.
+          </h1>
+          <p className="mt-4 text-lg md:text-xl text-white text-center">
+            Ropa deportiva de alta calidad hecha en Colombia
+          </p>
+          <button className="mt-6 bg-white text-black font-semibold py-2 px-6 rounded-xl shadow-md">
+            Ver productos
+          </button>
+        </div>
+      </div>
 
-  <section id="productos" class="productos">
-    <h2>Nuestros Productos</h2>
-    <div class="grid-productos">
-      <div class="producto">
-        <img src="https://via.placeholder.com/300x400" alt="Producto 1">
-        <h3>Top Deportivo Sahara</h3>
-        <p>$49.900</p>
-        <a href="producto.html" class="btn-mini">Ver más</a>
-      </div>
-      <div class="producto">
-        <img src="https://via.placeholder.com/300x400" alt="Producto 2">
-        <h3>Leggins de Compresión</h3>
-        <p>$89.900</p>
-        <a href="producto.html" class="btn-mini">Ver más</a>
-      </div>
+      {/* Sección de productos */}
+      <section id="productos" className="py-16 px-4 bg-white text-black">
+        <h2 className="text-3xl font-bold text-center mb-10">Nuestros Productos</h2>
+        <div className="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
+          <div className="bg-gray-100 p-6 rounded-xl shadow-md flex flex-col items-center">
+            <img src="/img/producto1.png" alt="Producto 1" className="w-32 h-32 object-contain mb-4" />
+            <h3 className="text-xl font-semibold text-center">Top Deportivo Sahara</h3>
+            <p className="text-lg mb-4">$49.900</p>
+            <button className="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">
+              Ver más
+            </button>
+          </div>
+          <div className="bg-gray-100 p-6 rounded-xl shadow-md flex flex-col items-center">
+            <img src="/img/producto2.png" alt="Producto 2" className="w-32 h-32 object-contain mb-4" />
+            <h3 className="text-xl font-semibold text-center">Leggins de Compresión</h3>
+            <p className="text-lg mb-4">$89.900</p>
+            <button className="bg-black text-white px-4 py-2 rounded hover:bg-gray-800">
+              Ver más
+            </button>
+          </div>
+        </div>
+      </section>
+
+      {/* Sección Nosotros */}
+      <section id="nosotros" className="bg-gray-100 py-16 px-4 text-center text-black">
+        <h2 className="text-2xl font-bold mb-6">Sobre Nosotros</h2>
+        <p className="max-w-3xl mx-auto">
+          En Sahara Wear creemos en el poder de vestir con confianza, apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.
+        </p>
+      </section>
+
+      {/* Sección Contacto */}
+      <section id="contacto" className="bg-gray-100 py-16 px-4 text-center text-black">
+        <h2 className="text-2xl font-bold mb-6">Contacto</h2>
+        <p className="max-w-2xl mx-auto">
+          Contáctanos en:<br />
+          Correo: saharawear@hotmail.com<br />
+          Instagram: <a href="https://www.instagram.com/sahara__wear" className="underline">@sahara__wear</a><br />
+          Facebook: <a href="https://www.facebook.com/share/16CR9DFW3t" className="underline">/sahara.wear</a>
+        </p>
+      </section>
     </div>
-  </section>
-
-  <section id="nosotros" class="nosotros">
-    <h2>Sobre Nosotros</h2>
-    <p>En Sahara Wear creemos en el poder de vestir con confianza. Apoyamos el talento colombiano y diseñamos prendas con calidad, estilo y pasión.</p>
-  </section>
-
-  <section id="contacto" class="contacto">
-    <h2>Contacto</h2>
-    <p>¿Tienes dudas o quieres distribuir nuestra marca? Escríbenos a <strong>saharawear@correo.com</strong></p>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; 2025 Sahara Wear. Todos los derechos reservados.</p>
-  </footer>
-</body>
-</html>
+  );
+}
